# drill

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/detect/: pose.h
devel/lib/depthsense_cam/: depthsense_cam_node
devel/lib/detect/: cam_test  circle  circle1  circle_pose  circle_pose_ds  corner  detect_node  image_converter  track_node  wrenches
devel/lib/pkgconfig/: depthsense_cam.pc  detect.pc  drill_control.pc  drill_description.pc  drill_gazebo.pc
devel/lib/python2.7/dist-packages/detect/msg/: _pose.py
devel/share/common-lisp/ros/detect/msg/: _package.lisp  _package_pose.lisp  detect-msg.asd  pose.lisp
devel/share/depthsense_cam/cmake/: depthsense_camConfig.cmake
devel/share/detect/cmake/: detect-msg-extras.cmake  detect-msg-paths.cmake  detectConfig.cmake
devel/share/drill_control/cmake/: drill_controlConfig.cmake
devel/share/drill_description/cmake/: drill_descriptionConfig.cmake
devel/share/drill_gazebo/cmake/: drill_gazeboConfig.cmake
src/depthsense_cam/: CMakeLists.txt  CMakeLists.txt~
src/depthsense_cam/script/: base_detector.py  circle_detector.py  circle_ds.py  circle_ds.py~  circle_tracker.py  circle_wrench.py  circle_xtion.py  depth_info.py  depth_info.py~  depth_xtion.py  wrench_nav.py
src/depthsense_cam/src/: depthsense_cam_node.cpp
src/depthsense_cam/src/driver/src/: depthsense_cam_driver.cpp
src/detect/: CMakeLists.txt  CMakeLists.txt~  README.md
src/detect/scripts/: circle_detect.py  circle_usbcam.py  ds_vision.py  pytest.py
src/detect/src/: circle_pose_ds.cpp
src/drill_control/: CMakeLists.txt
src/drill_control/config/: controllers.yaml  drillbot.srdf  joint_limits.yaml~  kinematics.yaml  kinematics.yaml~
src/drill_control/launch/: drill_control.launch
src/drill_description/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/drill_description/launch/: drillbot_upload.launch  drillbot_upload.launch~
src/drill_description/meshes/: motor.stl  org_linear_touch.stl  org_motor_whole.stl  touch.dae  touch.stl
src/drill_description/urdf/: drill_robot.urdf.xacro~  drillbot.gazebo  drillbot.transmission.xacro  drillbot.urdf.xacro  drillbot.xacro~  drillbot_joint_limited.urdf.xacro  materials.xacro
src/drill_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/drill_gazebo/controller/: drillbot_controller.yaml
src/drill_gazebo/launch/: controller_utils.launch  drill_world.launch  drill_world.launch~  drillbot.launch  drillbot.launch~  drillbot_joint_limited.launch
src/drill_gazebo/worlds/: drillbot.world
